--- a/src/app/component/login-admin/login-admin.component.html
+++ b/src/app/component/login-admin/login-admin.component.html
@@ -15,10 +15,12 @@
           <form>
           <div class = "email">
             <input type="email" id="inputEmail" class="form-control" placeholder="Enter Email" required autofocus>
+            <div id = "msg"></div>
           </div>
           <div class = "password">
               <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-          </div>
+              <div id = "msgp"></div>
+            </div>
           <br>
             <div class = "button">
           <button class="btn btn-primary" type="submit">Sign in</button>
