--- a/src/app/component/login-admin/login-admin.component.html
+++ b/src/app/component/login-admin/login-admin.component.html
@@ -15,11 +15,11 @@
           <form>
           <div class = "email">
             <input type="email" id="inputEmail" class="form-control" placeholder="Enter Email" required autofocus>
-            <div id = "msg"></div>
+            <div class="colors" id = "msg"></div>
           </div>
           <div class = "password">
               <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-              <div id = "msgp"></div>
+              <div class = "colors" id = "msgp"></div>
             </div>
           <br>
             <div class = "button">
