--- a/src/app/component/login-dashboard/login-dashboard.component.html
+++ b/src/app/component/login-dashboard/login-dashboard.component.html
@@ -1,9 +1,4 @@
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-  crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-  crossorigin="anonymous">
+
 
 <div class="container-fluid">
   <div class="card ">
@@ -15,35 +10,84 @@
       <span class="letter5">O</span>
       <span class="letter6">O</span>
       <span class="logout">
-          <a href="/loginAdmin" class="btn btn-primary">Logout</a>
+        <div id="log" class="btn btn-primary">Logout</div>
       </span>
     </div>
     <div class="display">
       <h1 class="display-5">Welcome to Admin Dashboard </h1>
     </div>
   </div>
-  
+<br>
   <div class="container-fluid " style="overflow-x:auto">
-    <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="card col-lg-4" fxLayoutAlign = "space-between">
-        <div style ="text-transform: uppercase;"  id = "services">
+      <div align="center">
+        <div class="col-lg-12"></div>
+        <div class="col-lg-12">
+          <div  id="services"></div>
+        </div>
       </div>
-      </div>
-      <div class="col-lg-4"></div>
-    </div>
+    
     <div class="card ">
-      <table id="userList" class="display nowrap " style="width:100%; color: black; overflow-x: auto">
+      <table id="userList" class="  table-hover " style="width:100%; color: black; overflow-x: auto">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First name</th>
-            <th scope="col">Last name</th>
-            <th scope="col">Email ID</th>
-            <th scope="col">Services</th>
+            <th scope="col" >#</th>
+            <th scope="col" >First Name</th>
+            <th scope="col" >Last name</th>
+            <th scope="col" >Email ID</th>
+            <th scope="col" >Services</th>
           </tr>
         </thead>
+        <!-- <tfoot>
+          <tr>
+            <th >#</th> 
+              <th>First name</th>
+              <th>Last name</th>
+              <th>Email</th>
+              <th>Services</th>
+           
+          </tr>
+      </tfoot> -->
       </table>
     </div>
   </div>
 </div>
+
+
+
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="myDataPopup" style="display:none">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">User Data</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+       First Name :  <label id="firstName"></label><br>
+       Last Name :  <label id="lastName"></label><br>
+         Phone Number : <label id="phoneNumber"></label><br>
+        Email Id : <label id="email"></label><br>
+          Role : <label id="role"></label><br>
+         Service : <label id="service"></label><br>
+          Created Date : <label id="createdDate"></label><br>
+         Modified Date :  <label id="modifiedData"></label><br>
+         <!-- <label id="userName"></label><br> -->
+         <!-- <label id="email"></label><br> -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
