--- a/src/app/component/login-admin/login-admin.component.css
+++ b/src/app/component/login-admin/login-admin.component.css
@@ -16,7 +16,7 @@ text-align: center;
     border-radius: 2px;
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px #0000004d;
 }
 .letter1
 {
