--- a/src/app/component/question-admin/question-admin.component.css
+++ b/src/app/component/question-admin/question-admin.component.css
@@ -6,7 +6,7 @@
 .card
 {
     margin-top: 2%;
-    background-color: rgb(101, 199, 245);
+    background-color: #ffffff
 }
 .letters
 {
@@ -16,6 +16,9 @@
 {
   color : blue;
 font-size: 30px;
+}
+.lo{
+    word-break: break-all
 }
 .letter2
 {
