--- a/src/app/component/question-admin/question-admin.component.html
+++ b/src/app/component/question-admin/question-admin.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div  class="container-fluid">
     <div class="card ">
         <div class="letters" fxLayout="row" style="font-style:2vw">
           <span class="letter1">F</span>
@@ -8,7 +8,7 @@
           <span class="letter5">O</span>
           <span class="letter6">O</span>
           <span class="logout">
-            <div id="log" class="btn btn-primary">Logout</div>
+            <div id="log" class="btn btn-primary">DashBoard</div>
           </span>
         </div>
         <div class="display" style="font-style:2vw">
@@ -21,10 +21,24 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">Questions Asked</th>
-        <th scope="col">Reply/Reject</th>
+        <th scope="col">Accept/Reject</th>
       </tr>
     </thead>
-    <!-- <button type="button" class="btn btn-success">Success</button> -->
   </table>
 </div>
 </div>
+
+<!-- <div class="sk-circle"  *ngIf = "!show" >
+    <div class="sk-circle1 sk-child"></div>
+    <div class="sk-circle2 sk-child"></div>
+    <div class="sk-circle3 sk-child"></div>
+    <div class="sk-circle4 sk-child"></div>
+    <div class="sk-circle5 sk-child"></div>
+    <div class="sk-circle6 sk-child"></div>
+    <div class="sk-circle7 sk-child"></div>
+    <div class="sk-circle8 sk-child"></div>
+    <div class="sk-circle9 sk-child"></div>
+    <div class="sk-circle10 sk-child"></div>
+    <div class="sk-circle11 sk-child"></div>
+    <div class="sk-circle12 sk-child"></div>
+  </div> -->
